--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-sbt-growltest: Growl autotesting for Scala with Specs
+sbt-notifytest: Growl autotesting for Scala with Specs
 
 I'm using Scala with simple-build-tool and Specs. In Ruby, there is a tool
 called ZenTest autotest which does what sbt ~ test does (i.e. runs a test loop
@@ -6,14 +6,13 @@ every time you save a file). It has one main advantage which is that it can use
 Growl (the OS X notification library) to tell you whether your tests have
 passed or failed. This is the only way I find that I can do TDD - having to
 alt-tab all day and inspect the output isn't fun. And IDEs are just... no way.
-Vim or TextMate please.
+Vim or TextMate^WSciTE please.
 
-sbt-growltest is a Ruby script which invokes `sbt "~ test"` and monitors the
-output. It offers three types of Growl notification - either "Tests pass",
-"Compilation failed; tests didn't run" or "Tests fail".
+sbt-notifytest is a Python script which invokes `sbt "~ test"` and monitors the
+output. It offers three types of libnotify notification - either "Tests pass",
+"Compilation failed; tests didn't run" or "Tests fail". Unlike the Growl
+version, we use the standard GNOME icons for errors and information. They are a
+bit dull, but they work.
 
-I've included the Java mascot 'Duke' with a red nose for when tests/compile
-fail and with a photoshopped green nose for when tests pass!
-
-- you need to make sure you have Ruby (1.8 or 1.9 - shouldn't matter)
-- you may need to modify the script to point to images wherever you put them
+The original is sbt-growltest which uses OS X's Growl:
+http://github.com/tommorris/sbt-growltest
